[project]
name = "transceiver"
version = "0.0.1"
dependencies = []
description = "A boilerplate package with perceiver for transients"
authors = [
    { name="Yunyi Shen", email="yshen99@mit.edu" }
]
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["transceiver"]